test/scc/lex/errors/005.a
005.t:1:1: error: comment unclosed at end of file